# rust-genetic-algorithm

./: Cargo.toml
data/: items.txt
src/: item.rs  lib.rs  main.rs  speciman.rs
src/genalg/: item.rs  lib.rs  population.rs  selected.rs  speciman.rs  specimen.rs
webassembly/: build.sh  index.html  main.asm.js  main.js  main.wasm
