[package]
name = "genetic-alg"
version = "0.1.0"
authors = ["Clinton McKay <mckizzle@users.noreply.github.com>"]

[profile.dev]
opt-level = 0

[lib]
name = "genalg"
path = "src/genalg/lib.rs"

[[bin]]    
name = "genalg_runner"    
path = "src/main.rs"

[dependencies]
rand = "0.3.14"
time = "0.1.35"
ordered-float = "0.3.0"

